--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "express": "^4.16.4",
     "method-override": "^3.0.0",
     "mysql": "^2.16.0"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
