--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,10 +18,8 @@
   "homepage": "https://github.com/desmondmullen/burger#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
     "method-override": "^3.0.0",
     "mysql": "^2.16.0"
-  },
-  "scripts": {
-    "start": "node server.js"
   }
 }
